--- a/Projects/SoundWinAgent/packages.config
+++ b/Projects/SoundWinAgent/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="7-Zip.CommandLine" version="18.1.0" targetFramework="native" />
   <package id="MSBuildTasks" version="1.5.0.235" targetFramework="native" developmentDependency="true" />
-  <package id="SpdLogger" version="2.2.1" targetFramework="native" />
+  <package id="SpdLogger" version="2.2.2-RC006" targetFramework="native" />
 </packages>
