SpdLogger moved to sheared submodule, no need for old SpdLogger NuGet

--- a/Projects/SoundAgentLib/SoundAgentLib.vcxproj
+++ b/Projects/SoundAgentLib/SoundAgentLib.vcxproj
@@ -53,6 +53,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ApiClient\AudioDeviceApiClient.h" />
+    <ClInclude Include="ApiClient\common\SpdLogger.h" />
+    <ClInclude Include="ApiClient\common\SpdLogger\AppPath.h" />
+    <ClInclude Include="ApiClient\common\SpdLogger\LogBuffer.h" />
+    <ClInclude Include="ApiClient\common\SpdLogger\Logger.h" />
     <ClInclude Include="ApiClient\HttpRequestProcessor.h" />
     <ClInclude Include="ApiClient\SodiumCrypt.h" />
     <ClInclude Include="ApiClient\common\ClassDefHelper.h" />
