--- a/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj
+++ b/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj
@@ -20,9 +20,7 @@
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\msbuildLibCpp\Ed.Cpp.props" />
-  <ImportGroup Label="ExtensionSettings">
-    <Import Project="..\..\packages\SpdLogger.2.2.2-RC006\build\native\SpdLogger.targets" Condition="Exists('..\..\packages\SpdLogger.2.2.2-RC006\build\native\SpdLogger.targets')" />
-  </ImportGroup>
+  <ImportGroup Label="ExtensionSettings" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <IncludePath>$(VCInstallDir)Auxiliary\VS\UnitTest\include;$(IncludePath)</IncludePath>
@@ -65,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CollectionFactoryImpl.cpp" />
+    <ClCompile Include="LoggerTests.cpp" />
     <ClCompile Include="SoundAgentLibTests.cpp" />
     <ClCompile Include="SoundDeviceCollectionTests.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -77,17 +76,8 @@
       <Project>{19c404f0-a83c-4e4f-a931-7a76809cc0c5}</Project>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildThisFileDirectory)..\..\msbuildLibCpp\Ed.Cpp.targets" />                                                                                
+  <Import Project="$(MSBuildThisFileDirectory)..\..\msbuildLibCpp\Ed.Cpp.targets" />
   <Target Name="RunUnitTests" AfterTargets="Build">
     <Exec Command="&quot;$(VSInstallDir)Common7\IDE\Extensions\TestPlatform\vstest.console.exe&quot; &quot;$(TargetPath)&quot; /InIsolation /Logger:trx" />
-  </Target>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\SpdLogger.2.2.2-RC006\build\native\SpdLogger.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\SpdLogger.2.2.2-RC006\build\native\SpdLogger.targets'))" />
   </Target>
 </Project>
