--- a/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj.filters
+++ b/Projects/SoundAgentLibTests/SoundAgentLibTests.vcxproj.filters
@@ -34,8 +34,8 @@
     <ClCompile Include="CollectionFactoryImpl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="LoggerTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
