--- a/Projects/SoundAgentLib/SoundAgentLib.vcxproj.filters
+++ b/Projects/SoundAgentLib/SoundAgentLib.vcxproj.filters
@@ -93,4 +93,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ApiClient\README.md" />
+  </ItemGroup>
 </Project>
