GUI for default device added

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = Projects/SoundAgentLib/ApiClient
 	url = https://github.com/eduarddanziger/SoundAgentLib.git
 	branch = main
+[submodule "msbuildLib"]
+	path = msbuildLib
+	url = https://github.com/eduarddanziger/msbuildLib.git
+	branch = main
