--- a/Projects/HttpRequestProcessor/appsettings.json
+++ b/Projects/HttpRequestProcessor/appsettings.json
@@ -6,8 +6,9 @@
         "QueueName": "sdr_metrics"
     },
     "ApiBaseUrl": {
-        "Codespace": "https://your-api.example.com/device-metrics",
-        "Azure": "https://sdrepo-hjddbrc9b9gecddc.canadacentral-01.azurewebsites.net/api/AudioDevices"
+        "GitHubCodespaceUrl": "https://your-api.example.com/device-metrics",
+        "AzureUrl": "https://sdrepo-hjddbrc9b9gecddc.canadacentral-01.azurewebsites.net/api/AudioDevices",
+        "LocalVmUrl": "http://w10x64w10:5027/api/AudioDevices"
     },
     "Logging": {
         "LogLevel": {
