--- a/Projects/SoundAgentLib/SoundAgentLib.vcxproj
+++ b/Projects/SoundAgentLib/SoundAgentLib.vcxproj
@@ -54,11 +54,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ApiClient\AudioDeviceApiClient.h" />
+    <ClInclude Include="ApiClient\HttpGatewayProcessor.h" />
     <ClInclude Include="ApiClient\common\SpdLogger.h" />
     <ClInclude Include="ApiClient\common\SpdLogger\AppPath.h" />
     <ClInclude Include="ApiClient\common\SpdLogger\LogBuffer.h" />
     <ClInclude Include="ApiClient\common\SpdLogger\Logger.h" />
-    <ClInclude Include="ApiClient\HttpRequestProcessor.h" />
+    <ClInclude Include="ApiClient\HttpStandaloneProcessor.h" />
+    <ClInclude Include="ApiClient\HttpRequestProcessorInterface.h" />
     <ClInclude Include="ApiClient\MetricsPublisher.h" />
     <ClInclude Include="ApiClient\SodiumCrypt.h" />
     <ClInclude Include="ApiClient\common\ClassDefHelper.h" />
@@ -76,7 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ApiClient\AudioDeviceApiClient.cpp" />
-    <ClCompile Include="ApiClient\HttpRequestProcessor.cpp" />
+    <ClCompile Include="ApiClient\HttpGatewayProcessor.cpp" />
+    <ClCompile Include="ApiClient\HttpStandaloneProcessor.cpp" />
+    <ClCompile Include="ApiClient\MetricsPublisher.cpp" />
     <ClCompile Include="ApiClient\SodiumCrypt.cpp" />
     <ClCompile Include="SoundDevice.cpp" />
     <ClCompile Include="SoundDeviceCollection.cpp" />
