Renamings: Processor->Dispatcher

--- a/Projects/SoundAgentLib/SoundAgentLib.vcxproj
+++ b/Projects/SoundAgentLib/SoundAgentLib.vcxproj
@@ -54,13 +54,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ApiClient\AudioDeviceApiClient.h" />
-    <ClInclude Include="ApiClient\HttpGatewayProcessor.h" />
+    <ClInclude Include="ApiClient\RabbitMqHttpRequestDispatcher.h" />
     <ClInclude Include="ApiClient\common\SpdLogger.h" />
     <ClInclude Include="ApiClient\common\SpdLogger\AppPath.h" />
     <ClInclude Include="ApiClient\common\SpdLogger\LogBuffer.h" />
     <ClInclude Include="ApiClient\common\SpdLogger\Logger.h" />
-    <ClInclude Include="ApiClient\HttpStandaloneProcessor.h" />
-    <ClInclude Include="ApiClient\HttpRequestProcessorInterface.h" />
+    <ClInclude Include="ApiClient\DirectHttpRequestDispatcher.h" />
+    <ClInclude Include="ApiClient\HttpRequestDispatcherInterface.h" />
     <ClInclude Include="ApiClient\RequestPublisher.h" />
     <ClInclude Include="ApiClient\SodiumCrypt.h" />
     <ClInclude Include="ApiClient\common\ClassDefHelper.h" />
@@ -78,8 +78,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ApiClient\AudioDeviceApiClient.cpp" />
-    <ClCompile Include="ApiClient\HttpGatewayProcessor.cpp" />
-    <ClCompile Include="ApiClient\HttpStandaloneProcessor.cpp" />
+    <ClCompile Include="ApiClient\RabbitMqHttpRequestDispatcher.cpp" />
+    <ClCompile Include="ApiClient\DirectHttpRequestDispatcher.cpp" />
     <ClCompile Include="ApiClient\RequestPublisher.cpp" />
     <ClCompile Include="ApiClient\SodiumCrypt.cpp" />
     <ClCompile Include="SoundDevice.cpp" />
