--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,7 @@ jobs:
       run: |
         msbuild /p:Configuration=Release /p:VcpkgEnabled=true /p:VcpkgManifestPath=vcpkg.json /p:VcpkgTriplet=x64-windows-static /target:Rebuild -restore
         dotnet publish "Projects/SoundDefaultUI/SoundDefaultUI.csproj" -c Release -p:PublishProfile=FolderProfile
+        dotnet publish "Projects/HttpRequestProcessor/HttpRequestProcessor.csproj" -c Release -p:PublishProfile=WinX64
 
     - name: Upload entire artifacts directory
       uses: actions/upload-artifact@v4
