--- a/Projects/SoundDefaultUI/SoundDefaultUI.csproj
+++ b/Projects/SoundDefaultUI/SoundDefaultUI.csproj
@@ -65,7 +65,8 @@
       <FileUpdate Files="$(ReleaseNotesTargetPathName)" Regex="\$date\$" ReplacementText="$(BuildDate)" />
   </Target>
 
-  <Target Name="ZipOutputPath" AfterTargets="Publish">
+  <Target Name="ZipOutputPath" AfterTargets="SignAfterPublish">
+      <Message Text="Zip: PublishFullDirectory: $(PublishFullDirectory)" importance="high" />
       <PropertyGroup>
           <PublishFullDirectory>$(ProjectDir)$(PublishDir)</PublishFullDirectory>
           <ZipFileNameSuffix Condition=" '$(Configuration)' == 'Debug' ">-Debug</ZipFileNameSuffix>
