--- a/Projects/SoundDefaultUI/SoundDefaultUI.csproj
+++ b/Projects/SoundDefaultUI/SoundDefaultUI.csproj
@@ -20,6 +20,7 @@
     <Content Include="resources\Headphone.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
     <PackageReference Include="MaterialDesignColors" Version="5.2.1" />
     <PackageReference Include="MaterialDesignThemes" Version="5.2.1" />
     <PackageReference Include="MSBuildTasks" Version="1.5.0.235">
