--- a/Projects/SoundDefaultUI/appsettings.json
+++ b/Projects/SoundDefaultUI/appsettings.json
@@ -10,22 +10,22 @@
       "logname": "${processname}"
     },
     "time": {
-      "type": "AccurateUTC"
+        "type": "AccurateLocal"
     },
     "default-wrapper": {
       "type": "AsyncWrapper",
       "overflowAction": "Block"
     },
     "targets": {
-      "all-file": {
-        "type": "File",
-        "fileName": "${logdir}${dir-separator}${logname}-${shortdate}.log",
-        "createDirs": true,
-        "archiveEvery": "Day",
-        "archiveNumbering": "Sequence",
-        "archiveAboveSize": 5345280,
-        "layout": "${longdate} ${uppercase:${level}} ${message}"
-      },
+        "all-file": {
+            "type": "File",
+            "fileName": "${logdir}${dir-separator}${logname}-${shortdate}.log",
+            "createDirs": true,
+            "archiveEvery": "Day",
+            "archiveNumbering": "Sequence",
+            "archiveAboveSize": 5345280,
+            "layout": "${date:format=yyyy-MM-dd HH\\:mm\\:ss.ffffff} ${level:uppercase=true:format=FirstCharacter} [${native-thread-id}] ${message}"
+        },
       "own-console": {
         "type": "LimitingWrapper",
         "interval": "00:00:01",
