Rabbit MQ configuration, documentation and name conventions corrected

--- a/Projects/HttpRequestProcessor/appsettings.json
+++ b/Projects/HttpRequestProcessor/appsettings.json
@@ -3,7 +3,7 @@
         "HostName": "localhost",
         "UserName": "guest",
         "Password": "guest",
-        "QueueName": "sdr_metrics"
+        "QueueName": "sdr_queue"
     },
     "ApiBaseUrl": {
         "GitHubCodespaceUrl": "https://your-api.example.com/device-metrics",
