--- a/Projects/HttpRequestProcessor/appsettings.json
+++ b/Projects/HttpRequestProcessor/appsettings.json
@@ -6,7 +6,7 @@
         "QueueName": "sdr_queue"
     },
     "ApiBaseUrl": {
-        "GitHubCodespaceUrl": "https://your-api.example.com/device-metrics",
+        "GitHubCodespaceUrl": "https://probable-space-computing-machine-x5vwx5vxr959cvq6j-5027.app.github.dev/api/AudioDevices",
         "AzureUrl": "https://sdrepo-hjddbrc9b9gecddc.canadacentral-01.azurewebsites.net/api/AudioDevices",
         "LocalVmUrl": "http://w10x64w10:5027/api/AudioDevices"
     },
