--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,37 @@ jobs:
           else {
             # Not on a tag: derive pre-release from latest v* tag (or seed)
             $latestTag = git describe --tags --match "v[0-9]*" --abbrev=0 2>$null
-            if (-not $latestTag) { $latestTag = 'v0.1.0' }
+            if (-not $latestTag) {
+                $latestTag = git describe --tags --match "Release-*" --abbrev=0
+                if (-not $latestTag) {
+                    Write-Host "No Release tag found. Using default version 1.0.0."
+                    "VERSION=1.0.0" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+                    exit 0
+                }
+                # Extract version number from the tag (e.g., Release-1.0.1 -> 1.0.1)
+                $versionNumber = $latestTag -replace '^Release-', ''
+            }
+            else  {
+                # Extract version number from the tag (e.g., v1.0.1 -> 1.0.1)
+                $versionNumber = $latestTag -replace '^v', ''
+            }
+            Write-Host "latestTag: $latestTag, versionNumber: $versionNumber"
             $distance = git rev-list --count "$latestTag..HEAD"
-            if ($distance -eq 0) {
-              $version = $latestTag
+
+            # Append -SP<distance> if distance is greater than 0
+            if ($distance -gt 0) {
+                # Increment the third number
+                $versionParts = $versionNumber -split '\.'
+                $versionParts[2] = [int]$versionParts[2] + 1
+                $versionNumber = $versionParts -join '.'
+                Write-Output "VERSION CORRECTED, versionNumber: $versionNumber"
+
+                # Add SP info
+                $distancePadded = $distance.ToString().PadLeft(3, '0')
+                Write-Output "DISTANCE PADDED, distancePadded: $distancePadded"
+                $version = "$versionNumber-rc$distancePadded"
             } else {
-              # Pre-release: vX.Y.Z-dev.<distance>
-              $version = "$latestTag-dev.$distance"
+                $VERSION = $VERSION_NUMBER
             }
             Write-Host "Derived development version: $version (base: $latestTag)"
           }
